Create new brank and redo all

--- a/index.html
+++ b/index.html
@@ -6,20 +6,34 @@
     <body>
         <header>
         <nav class='nav'>
-            <a>Contact</a>
-            <a>Project</a>
-            <a class='active'>Home</a>
+            <a href=''>Contact</a>
+            <a href='https://bimbabum.github.io/HTMLCheatsheet/' target='_blank'>Project</a>
+            <a href='' class='active'>Home</a>
             <img src='./Images/JM Logo.JPG' width=70px>
+            <p></p>
         </nav>
         <div class='top-banner'>
             <p>A healthy life style</p>
         </div>
 
         <section class='aboutme'>
+            <img src='./Images/avatar.jpg'>
+            <div>
             <h2>About me</h2>
+            <p>My name is Trang, but you can call me JM.</p>
+            <p>The element is positioned according to the normal flow of the document</p>
+            <p>The element is removed from the normal document flow, and no space is created for the element in the page layout. It is positioned relative to its closest positioned ancestor, if any; otherwise, it is placed relative to the initial</p>\
+            <p>he element is removed from the normal document flow, and no space is created for the element in the page layout. It is positioned relative to the initial containing block established by the viewport, except when one of its ancestors has a transform, perspective, or filter property set to something other than none</p>
+            </div>
         </section>
         <section class='project'>
+            <div>
             <h2>Projects</h2>
+            <p>Projects that I've done:</p>
+            <ul>
+                <li>HTML & CSS Cheat sheet</li>
+            </ul>
+            </div>    
         </section>
     </body>
 </html>
